--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,34 @@ __pycache__/
 env/
 venv/
 ENV/
-.venv
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Flask
 instance/
 .webassets-cache
+
+# Base de datos
+*.db
+*.sqlite
+*.sqlite3
+
+# Variables de entorno
+.env
+.env.local
 
 # IDE
 .vscode/
@@ -26,4 +49,3 @@ Thumbs.db
 
 # Logs
 *.log
-
