--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Werkzeug==3.0.1
 gunicorn==21.2.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.0
 python-dotenv==1.0.0
 
