Crear interfaces separadas para plan básico y premium
- Crear welcome_premium.html y welcome_premium.js para web premium
- Modificar ruta /welcome para redirigir según plan activo
- Crear MainActivityPremium.kt para Android premium
- Modificar MainActivity para redirigir a MainActivityPremium si es premium
- Ocultar botón Suscríbete ahora en interfaz premium
- Ocultar recomendaciones IA en interfaz básica
- Agregar MainActivityPremium al AndroidManifest
- Actualizar BenefitsActivity para redirigir a la Activity correcta

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
             android:theme="@style/Theme.PixelPick" />
         
         <activity
+            android:name=".ui.main.MainActivityPremium"
+            android:exported="false"
+            android:theme="@style/Theme.PixelPick" />
+        
+        <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="false"
             android:theme="@style/Theme.PixelPick" />
